--- a/.globalconfig
+++ b/.globalconfig
@@ -965,7 +965,7 @@ dotnet_diagnostic.IDE0078.severity = silent
 dotnet_diagnostic.IDE0079.severity = silent
 
 # IDE0080: RemoveConfusingSuppressionForIsExpression
-dotnet_diagnostic.IDE0080.severity = silent
+dotnet_diagnostic.IDE0080.severity = warning
 
 # IDE0081: RemoveUnnecessaryByVal
 dotnet_diagnostic.IDE0081.severity = silent
